Support compiled tuple assignment
Also, support tuple assignment from any iterable rhs, not just tuples.